mcquade and summers car show video added to summers page

--- a/child_pages/cc-elections/Candidates/summers.html
+++ b/child_pages/cc-elections/Candidates/summers.html
@@ -259,6 +259,122 @@
          </div>
      </div>
 
+     <details>
+        <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
+
+        <div class="video-box-modal can-sec">
+            <h3 class="video-heading">Man on the Street at the Millville Car Show – Robert McQuade &amp; David Summers for City Commissioner</h3>
+
+            <iframe src="https://www.youtube.com/embed/WkhmPEMdJok?si=tUVDZWbU46Ryja1K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+            <br><br>
+
+            <details>
+            <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full interview summary 📋</summary>
+            <br><br>
+            <div style="padding: 15px 25px; text-align: left;">
+                <p>
+                At the Millville Car Show, Steven Solof of InformTheVoteNJ.com caught up with Robert McQuade and David Summers, both candidates for
+                Millville City Commissioner. In this on-the-ground conversation, McQuade and Summers discuss the energy of this year’s car show,
+                their backgrounds, and what they hope to accomplish if elected.
+                </p>
+
+                <p>
+                <strong>McQuade’s Priorities:</strong><br>
+                McQuade explains he’s seeking to return to the Commission to finish projects he helped launch — cleaning and beautifying city streets,
+                working alongside the Streets and Roads Department, and addressing unfinished clean-up sites. He also outlines his interest in 21st Century
+                grants to create after-school and weekend activities for youth and reopening the local lake for family recreation.
+                </p>
+
+                <p>
+                <strong>Community Event — Millville Neighborhood Cleanup Day:</strong><br>
+                This brings up an upcoming community event hosted by the Holly City Development Corporation:
+                <em>Thursday, September 25, 1:00–5:00 PM</em>. Registration link:
+                <!-- Replace # with the verified registration URL -->
+                <a href="#" rel="nofollow noopener">link to come after Google verification</a>.
+                </p>
+
+                <p>
+                <strong>Summers on Homelessness &amp; Outreach:</strong><br>
+                Summers draws on his past with car clubs to describe the event’s record turnout and pivots to homelessness and outreach, saying that many
+                people are unaware of the bus service to the shelter or the process for receiving benefits. Both candidates stress the need for better
+                communication and community participation, from clean-up days to churches helping connect services.
+                </p>
+
+                <p>
+                <strong>Closing Notes:</strong><br>
+                The interview closes with McQuade giving out his personal phone number for residents to reach him (<span style="white-space:nowrap;">609-501-2437</span>)
+                and noting his long-time volunteer service picking up and disposing of unwanted televisions. Summers emphasizes that many people need liaisons to help
+                navigate “due process” and access existing programs.
+                </p>
+            </div>
+            </details>
+
+            <br><br>
+
+            <details>
+            <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary>
+            <div class="video-summary" style="margin-top: 1em;">
+                <h2>Interview Summary – Millville Car Show (McQuade &amp; Summers)</h2>
+                <p>This table highlights the key topics covered in the interview, summarizing major takeaways per section.</p>
+                <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                <thead>
+                    <tr>
+                    <th style="text-align: left;">Timestamp</th>
+                    <th style="text-align: left;">Topic</th>
+                    <th style="text-align: left;">Key Takeaways</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                    <td>0:00</td>
+                    <td>Event Atmosphere</td>
+                    <td>Both candidates describe the car show as one of the best in years, with big turnout, fun cars, and familiar faces.</td>
+                    </tr>
+                    <tr>
+                    <td>1:00</td>
+                    <td>McQuade on Campaign Updates</td>
+                    <td>Wants to return to the Commission to finish cleaning streets, painting curbs, and pushing stalled projects (like the factory site). Highlights hands-on work with Streets and Roads.</td>
+                    </tr>
+                    <tr>
+                    <td>2:05</td>
+                    <td>Community Clean-up Day</td>
+                    <td>Solof plugs Holly City Development Corporation’s Millville Neighborhood Cleanup Day (Sept. 25, 1–5 PM); both candidates plan to attend and finish unfinished railroad track cleanup.</td>
+                    </tr>
+                    <tr>
+                    <td>3:00</td>
+                    <td>Youth Activities &amp; Lake Reopening</td>
+                    <td>McQuade would pursue 21st Century grants for after-school programs; also hopes to reopen the lake for public recreation despite costs for lifeguards and an officer.</td>
+                    </tr>
+                    <tr>
+                    <td>3:50</td>
+                    <td>Homelessness &amp; Outreach</td>
+                    <td>Summers notes a bus exists to bring people to the shelter but it’s not well advertised. McQuade mentions shelter rules separating families, proposes church involvement, recounts a local woman’s hardship, and criticizes panhandling issues.</td>
+                    </tr>
+                    <tr>
+                    <td>6:40</td>
+                    <td>Accessibility &amp; Personal Service</td>
+                    <td>McQuade shares his phone number (609-501-2437) and describes his 13-year volunteer effort picking up TVs for residents.</td>
+                    </tr>
+                    <tr>
+                    <td>7:20</td>
+                    <td>Information Gaps &amp; Liaisons</td>
+                    <td>Summers points out many people don’t know how to access entitlements; Solof raises the idea of more liaisons to “connect the dots.” Both agree better communication is needed.</td>
+                    </tr>
+                    <tr>
+                    <td>8:00</td>
+                    <td>Wrap-Up</td>
+                    <td>Interview ends with thanks and a reminder that InformTheVoteNJ helps voters become more informed.</td>
+                    </tr>
+                </tbody>
+                </table>
+            </div>
+        </details>
+        </div>
+
+        
+        </details>
+
      <!-- <div class="gauge-box">
         <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Low </h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
