correct embed link for summers and mcquade wvlt video

--- a/child_pages/cc-elections/Candidates/summers.html
+++ b/child_pages/cc-elections/Candidates/summers.html
@@ -378,9 +378,7 @@
         <div class="video-box-modal can-sec">
             <h3 class="video-heading">Talk Around Millville (WVLT): Dave Summers &amp; Robert McQuade — Cleanup, “Trash Tax,” Broad St., &amp; Bringing Civics Back</h3>
 
-            <!-- Replace the src below with the correct YouTube ID for this WVLT interview -->
-            <iframe src="https://www.youtube.com/embed/WkhmPEMdJok?si=tUVDZWbU46Ryja1K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/h53gzYgvK4Y?si=oAFf7BhbtOtfOMt_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <br><br>
 
             <details>
@@ -535,13 +533,13 @@
 
         <br>
 
-     <!-- <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Low </h4>
+     <div class="gauge-box">
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Average (Trending Upwards) </h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_real_bad.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
-    </div>  -->
+    </div> 
 
      
             
