--- a/child_pages/cc-elections/Candidates/mcquade.html
+++ b/child_pages/cc-elections/Candidates/mcquade.html
@@ -545,9 +545,7 @@
         <div class="video-box-modal can-sec">
             <h3 class="video-heading">Talk Around Millville (WVLT): Dave Summers &amp; Robert McQuade — Cleanup, “Trash Tax,” Broad St., &amp; Bringing Civics Back</h3>
 
-            <!-- Replace the src below with the correct YouTube ID for this WVLT interview -->
-            <iframe src="https://www.youtube.com/embed/WkhmPEMdJok?si=tUVDZWbU46Ryja1K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+            <iframe  src="https://www.youtube.com/embed/h53gzYgvK4Y?si=oAFf7BhbtOtfOMt_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <br><br>
 
             <details>
