summers page update

--- a/child_pages/cc-elections/Candidates/summers.html
+++ b/child_pages/cc-elections/Candidates/summers.html
@@ -142,9 +142,10 @@
               <h6 class="page-title">David Summers</h6>
               <p>          
 
-                As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
-                is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
-                perceived as a lack of effort on our part, we simply haven't received anything yet.
+                David Summers is a first-time Millville City Commission candidate with over three decades of local manufacturing experience at Wheaton/NIPRO as a CNC operator, programmer, and 
+                supervisor. He’s known for bringing his own heavy equipment to volunteer cleanups, emphasizing citywide cleanliness, fair trash policy, and listening directly to residents through 
+                door-to-door outreach and a weekly call-in radio show. Summers supports rebuilding local press, practical civics education, and better information access so people can more easily 
+                navigate city services.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -159,10 +160,19 @@
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close">
               <h4 class="quick-sum">Rating Explanation</h4>
               <h6 class="page-title">David Summers</h6>
-              <p>          
-
+              <p> David Summers is a first-time candidate who has shown early signs of accessibility and openness. His initial interviews with InformTheVoteNJ were brief but cordial, giving voters 
+                a basic sense of his background and priorities. He has since continued co-hosting a weekly call-in radio show with Robert McQuade, where residents can ask questions live — a 
+                positive signal of ongoing engagement. 
+                <br><br> 
+                While his campaign messaging is still developing, Summers has proactively invited InformTheVoteNJ to do a walkthrough of his day 
+                job to discuss his work and expand on his platform in greater depth. This willingness to open up his workplace and provide more context about his skills and approach suggests a 
+                trajectory toward stronger transparency. 
+                <br><br> 
+                Given these factors, Summers currently holds an <strong>“Average (Trending Upwards)”</strong> transparency rating. To raise that rating further, he would benefit from 
+                consolidating his positions into a detailed, public-facing platform and participating in longer-form interviews that explore his agenda beyond surface-level issues. 
+                <br>
+                <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
-
               </p>
             </div>
         </dialog>
@@ -545,28 +555,201 @@
             
      <div class="candidate-agenda">
 
-            <h4 class="sub-heading">Agenda</h4>
-            <div class="experience can-sec">
-                As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
-                is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
-                perceived as a lack of effort on our part, we simply haven't received anything yet.
-            </div>
-            
-            <h4 class="sub-heading">Background and Campaign Message</h4>
-            <div class="experience can-sec">
-                As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
-                is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
-                perceived as a lack of effort on our part, we simply haven't received anything yet.
-            </div>
+        <h4 class="sub-heading">Agenda</h4>
+        <div class="experience can-sec">
+            <ul>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>City Cleanliness & Targeted Street Improvements</strong></summary>
+                <p>
+                    David Summers prioritizes hands-on cleanup and maintenance across Millville. He has personally joined
+                    volunteer efforts—bringing his own heavy equipment—to clear problem areas such as sections along the
+                    railroad tracks, and he praises recent Parks &amp; Recreation cleanups as momentum to build on. If elected,
+                    he wants to identify hotspot corridors with residents and city staff, then keep those areas on a regular
+                    cleanup schedule.
+                </p>
+                <br>
+                <p>
+                    Summers’ approach is practical: focus on the visible, high-impact areas first; coordinate volunteers and
+                    departments to reduce backlog; and make it easy for neighbors to report issues so crews can respond
+                    efficiently.
+                </p>
+                </details>
+            </li>
+            <br>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>Fair, Common-Sense Trash Policy</strong></summary>
+                <p>
+                    Based on resident feedback, Summers wants to revisit Millville’s trash policies so costs are shared
+                    fairly. He has voiced concerns about “trash tax” structures and loopholes that shift large-scale
+                    disposal costs onto everyday residents. His position: sizeable complexes and corporations should handle
+                    (and pay for) their own removal rather than burdening taxpayers.
+                </p>
+                <br>
+                <p>
+                    The goal is to keep neighborhoods clean without penalizing households that already follow the rules, while
+                    ensuring the biggest waste producers carry their share of the load.
+                </p>
+                </details>
+            </li>
+            <br>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>Listening Tour & Resident Surveys</strong></summary>
+                <p>
+                    Summers plans a campaign-trail “listening tour” to gather specific neighborhood concerns and use that input
+                    to shape priorities. He also supports open phone lines through a weekly call-in radio format so residents
+                    can raise issues in real time and hear responses immediately.
+                </p>
+                <br>
+                <p>
+                    He views this two-way feedback loop—door-to-door conversations plus on-air call-ins—as essential to setting
+                    a grounded agenda that reflects what people actually need on their block.
+                </p>
+                </details>
+            </li>
+            <br>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>Better Information Access: Rebuilding Local Press</strong></summary>
+                <p>
+                    Summers supports efforts to strengthen local press and centralized civic information so residents (and
+                    candidates) can see what’s happening without going on a scavenger hunt. He’s in favor of streamlining how
+                    meetings, surveys, and updates are covered and shared, including citizen livestreams where appropriate.
+                </p>
+                <br>
+                <p>
+                    Clearer, more consistent coverage makes it easier for people to follow issues, compare proposals, and hold
+                    local government accountable.
+                </p>
+                </details>
+            </li>
+            <br>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>Practical Civics & Navigation Help</strong></summary>
+                <p>
+                    Summers emphasizes making city processes easier to navigate. From knowing which department to call to
+                    understanding available services (e.g., transportation to shelters), he supports “liaison” style help that
+                    connects residents to the right resources and explains next steps.
+                </p>
+                <br>
+                <p>
+                    He also supports re-introducing practical civics education so people can advocate confidently, follow up
+                    appropriately, and keep good ideas moving.
+                </p>
+                </details>
+            </li>
+            <br>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>Teamwork on the Commission</strong></summary>
+                <p>
+                    Summers and McQuade are running as a ticket and stress collaboration as a top priority. Summers is clear:
+                    effective governance requires coalition-building—whoever wins needs to work together to deliver results for
+                    residents.
+                </p>
+                </details>
+            </li>
+            </ul>
+        </div>
 
-            <h4 class="sub-heading">Experience</h4>
-                <div class="experience can-sec">
-                     As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
-                is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
-                perceived as a lack of effort on our part, we simply haven't received anything yet.
-                </div>
-   
-    </div>
-</div>   
+        <h4 class="sub-heading">Issues</h4>
+        <div class="experience can-sec">
+            <ul>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>City Cleanliness Hotspots</strong></summary>
+                <p>
+                    Summers wants predictable cleanup for known trouble areas (e.g., along rail corridors and other litter
+                    hotspots) and an easy way for residents to flag problems. He favors blending volunteer days with scheduled
+                    city work so improvements stick.
+                </p>
+                </details>
+            </li>
+            <br>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>Trash Costs & Accountability</strong></summary>
+                <p>
+                    Summers questions policies that shift large-producer waste costs onto residents. He supports reviewing
+                    fees, contracts, and enforcement so apartment complexes and corporate owners handle their own trash
+                    removal—keeping the burden off households that already comply.
+                </p>
+                </details>
+            </li>
+            <br>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>Homelessness, Outreach & Service Awareness</strong></summary>
+                <p>
+                    Summers highlights basic awareness gaps—like residents not knowing about bus service to shelters or how to
+                    start benefit applications. He supports clear, well-advertised information plus community partners (churches,
+                    nonprofits, civic groups) to make navigation easier and connect people to help faster.
+                </p>
+                </details>
+            </li>
+            <br>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>Public Engagement & Transparency</strong></summary>
+                <p>
+                    Through a weekly call-in radio format and on-the-ground visits, Summers encourages residents to raise
+                    concerns, compare ideas, and pressure-test solutions in public. He sees regular, accessible conversation as
+                    foundational to trust and effective problem-solving.
+                </p>
+                </details>
+            </li>
+            </ul>
+        </div>
+
+        <h4 class="sub-heading">Background and Experience</h4>
+        <div class="experience can-sec">
+            <ul>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>Professional & Technical</strong></summary>
+                <p>
+                    Summers has worked locally since 1986—starting at Wheaton (later NIPRO) as a packer and mold maker, then
+                    advancing to CNC machine operator and <em>programmer</em> after training in Tennessee and Pennsylvania. He’s
+                    used CAD/CAM tools, set up machinery, and troubleshot production issues for decades.
+                </p>
+                </details>
+            </li>
+            <br>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>Supervision & Problem-Solving</strong></summary>
+                <p>
+                    As a supervisor, Summers trains operators, helps with setups, and resolves day-to-day technical problems.
+                    That practical, “fix-what’s-in-front-of-you” mindset shapes his approach to city issues as well.
+                </p>
+                </details>
+            </li>
+            <br>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>Community Service & Volunteer Cleanups</strong></summary>
+                <p>
+                    Summers has joined neighborhood cleanups—including bringing his own heavy equipment to remove debris along
+                    the railroad tracks—working alongside local volunteers and city crews to restore problem areas.
+                </p>
+                </details>
+            </li>
+            <br>
+            <li>
+                <details>
+                <summary style="color: blue;"><strong>Public Engagement</strong></summary>
+                <p>
+                    Summers co-hosts a weekly call-in conversation with residents to surface concerns and discuss solutions in
+                    plain language. He is early in his public life, but is leaning into accessibility and transparency so voters
+                    can hear directly from him as he continues to develop and articulate his platform.
+                </p>
+                </details>
+            </li>
+            </ul>
+        </div>
+        </div>
 </body>
 </html>
