summers pic added to meta stuff

--- a/child_pages/cc-elections/Candidates/summers.html
+++ b/child_pages/cc-elections/Candidates/summers.html
@@ -12,7 +12,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Candidate David Summers">
         <meta property="og:description" content="Running For Millville City Commission">
-        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/">
+        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/summers.jpg">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/summers">
     </head>
 <!-- Google tag (gtag.js) -->
