--- a/child_pages/cc-elections/Candidates/taylor_sherman.html
+++ b/child_pages/cc-elections/Candidates/taylor_sherman.html
@@ -172,15 +172,17 @@
     <p>
       Initial transparency/accessibility view: <em>Developing</em>. Taylor has posted a substantive introductory statement outlining his background and top 
       priorities and has an active Facebook campaign page (see below). At this stage, we have not yet logged a dedicated campaign website, long-form 
-      interviews, or a truly public facing campaign event. What that means is that there is an upcoming event with Taylor and two other candidates that is 
+      interviews, or a truly public facing campaign event. What that means is that there was an event with Taylor and two other candidates that was 
       technically a fundraiser, which limits voters and the press from hearing campaign messaging without directly supporting it. It also raises the question 
-      of whether these 3 candidates are campaigning together without publicly saying so.
+      of whether these 3 candidates are campaigning together without publicly saying so. This also presents the challenge citizen journalists who cover elections 
+      face during the throws of campaign season: even if there was a possibility of hanging around the fundraiser for interview opportunities before or after the 
+      event, it was one of at least 3 events that evening... so, I chose to go where I believed I would have a better chance of getting substantive info, and I would 
+      guess I made the right choice.
       <br><br>
       What would move this rating up: a central campaign site with organized agenda/issue pages; coordinated communication with the press; long-form 
       interviews (radio/podcast/video); a truly public and advertised campaign event; and timely replies to voter/media inquiries. As those pieces appear, 
-      we’ll update the rating to reflect real-world 
-      accessibility for voters. The main benefit for voters with this candidate and many others is to engage in the action plans that describe how his 
-      campaign ideas will actually materialize if they get elected.
+      we’ll update the rating to reflect real-world accessibility for voters. The main benefit for voters with this candidate and many others is to engage in the action plans 
+      that describe how his campaign ideas will actually materialize if they get elected.
       <br><br>
       Click the red x at the top of this box and then scroll down for more in-depth information and sources.
     </p>
