mcquade dual modal fix attempt 2

--- a/child_pages/cc-elections/Candidates/mcquade.html
+++ b/child_pages/cc-elections/Candidates/mcquade.html
@@ -275,7 +275,7 @@
                  <!-- <a href="https://www.facebook.com/robert.austino/" target="_blank"><i class="fa-brands fa-square-facebook" style="color: blue"></i></a> -->
              </div>
 
-             <button class="quick-summary-reopen">quick candidate summary</button>
+            <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
 
              <div class="election-date">
                  <p>This election is on November 4th, 2025</p>
