dual modal abandoned for mcquade, summary foldouts used instead

--- a/child_pages/cc-elections/Candidates/mcquade.html
+++ b/child_pages/cc-elections/Candidates/mcquade.html
@@ -275,7 +275,39 @@
                  <!-- <a href="https://www.facebook.com/robert.austino/" target="_blank"><i class="fa-brands fa-square-facebook" style="color: blue"></i></a> -->
              </div>
 
-            <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
+             <br>
+
+            <!-- <button id="quick-summary-reopen" class="quick-sum">quick summary</button> -->
+            <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                <p>
+                
+                Robert McQuade is a dedicated community leader with extensive experience in public service. Having served on the Millville School Board for 
+                nine years and as a City Commissioner for one year, McQuade brings a wealth of hands-on governance experience to his campaign.
+                <br>
+                <br>
+                His platform focuses on improving Millville’s infrastructure, cleaning up streets, and addressing the city's ongoing police staffing shortages. 
+                McQuade advocates for a more accessible government, emphasizing the importance of community engagement through initiatives like the Community 
+                Relations Board and Millville Ambassadors.
+                <br>
+                <br>
+                A strong proponent of economic development, McQuade is committed to boosting Millville’s economy through projects like the Nabb Ave road extension 
+                and supporting local businesses. He also addresses social issues such as homelessness, advocating for better solutions like the M25 initiative 
+                to provide housing for those in need.
+                <br>
+                <br>
+                McQuade’s stance on cannabis sales is cautious; he stresses the importance of considering community input and proximity to schools before 
+                making any decisions. With a focus on transparency, accessibility, and collaborative leadership, McQuade aims to foster a Millville that is 
+                safer, more prosperous, and more connected to its citizens.
+                <br>
+                <br>
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+              </p>
+            </details>
+
+            <br>
 
              <div class="election-date">
                  <p>This election is on November 4th, 2025</p>
@@ -905,7 +937,28 @@
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
-        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+        <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+
+        <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+            Robert McQuade has consistently demonstrated an unusual level of openness for a local candidate. When he first ran for Millville City Commission 
+            last year, he immediately expressed interest in collaborating with InformTheVoteNJ.com to discuss his campaign and Millville’s issues in depth. 
+            Since then, he has participated in multiple interviews — from podcast-style sit-downs to radio shows to spontaneous “man-on-the-street” 
+            conversations — and has welcomed follow-up questions each time.
+            <br>
+            <br>
+            In addition to engaging with independent press, McQuade now co-hosts The Talk Around Millville with David Summers on 92.1 FM WVLT on Tuesdays from 
+            6-7pm, a live call-in program that invites residents to discuss community concerns on air. Few local candidates offer that level of real-time 
+            access and public dialogue.
+            <br>
+            <br>
+            However, to fully secure “top-tier” status on transparency and accessibility, McQuade would still need to check some remaining boxes: 
+            launch a comprehensive, regularly updated campaign website and hold at least one well-advertised public meet-and-greet event specifically designed 
+            for voters to ask questions face-to-face. Taking those kinds of steps would complete the picture of a candidate who is not only accessible but also 
+            proactively organized and easy for every voter to find.
+        </details>
     </div> 
 
 
