garrison dual modal abandoned, foldouts used instead

--- a/child_pages/cc-elections/Candidates/garisson_heather.html
+++ b/child_pages/cc-elections/Candidates/garisson_heather.html
@@ -256,7 +256,25 @@
                  
              </div>
 
-             <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
+             <!-- <button id="quick-summary-reopen" class="quick-sum">quick summary</button> -->
+              <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                <p>          
+
+                Heather Garrison is a long-time Millville resident and community builder running for City Commissioner.  
+                She has been active in the PTA and local events for years and currently works for the Holly City Development 
+                Corporation on community, economic, and housing initiatives.  
+                In a brief “man on the street” interview she emphasized her belief in the power of community, a desire to 
+                highlight Millville’s positives, and a commitment to make residents feel safe, heard, and included.  
+                While this shows openness to engagement, detailed policy positions and a full platform have not yet been provided.
+                <br>
+                <br>
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+
+              </p>
+            </details>
 
              <div class="election-date">
                  <p>This election is on November 4th, 2025</p>
@@ -307,7 +325,9 @@
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
-        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+        <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+         <br>
+
     </div> 
 
      
@@ -343,16 +363,18 @@
         <li>
             <details>
             <summary style="color: blue;"><strong>Highlighting Millville’s Positives</strong></summary>
-            <p>
-                Garrison believes that Millville’s reputation can improve if its positive aspects are given more visibility. 
-                She says she wants to “help change the narrative” so residents and outsiders alike see Millville as 
-                a place with opportunity rather than decline. 
-            </p>
-            <br>
-            <p>
-                While she has not yet outlined specific policy proposals, her stated focus is on building a sense of safety, 
-                inclusion, and pride among residents through community and economic development initiatives.
-            </p>
+            <p>          
+                <p>
+                Relative to the Millville status quo, Heather Garrison’s transparency and accessibility is rated 
+                <strong>Average (Trending Upwards)</strong>. She has made herself available for a brief “man on the street” 
+                interview, offering a glimpse of her background and campaign message about community-driven change.  
+                However, voters looking for a fuller picture of her priorities will find limited detail beyond these 
+                initial statements.  
+                <br><br>
+                To move toward a stronger rating, Garrison could publish a comprehensively detailed platform on a dedicated 
+                website, host well-advertised meet-and-greet events where residents can ask questions, and participate in 
+                one or more longer-form campaign or press interviews to unpack her message in depth.
+              </p>
             </details>
         </li>
         </ul>
